; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_vertex2v.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_vertex2v.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vec2 = type { i32, i32 }
%struct.vec3 = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"gs_vertex2v\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_vertex2v(%struct.vec2* %0) #0 {
  %2 = alloca %struct.vec2*, align 8
  %3 = alloca %struct.vec3, align 4
  store %struct.vec2* %0, %struct.vec2** %2, align 8
  %4 = call i32 @gs_valid(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %16

7:                                                ; preds = %1
  %8 = load %struct.vec2*, %struct.vec2** %2, align 8
  %9 = getelementptr inbounds %struct.vec2, %struct.vec2* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.vec2*, %struct.vec2** %2, align 8
  %12 = getelementptr inbounds %struct.vec2, %struct.vec2* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @vec3_set(%struct.vec3* %3, i32 %10, i32 %13, float 0.000000e+00)
  %15 = call i32 @gs_vertex3v(%struct.vec3* %3)
  br label %16

16:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1

declare dso_local i32 @vec3_set(%struct.vec3*, i32, i32, float) #1

declare dso_local i32 @gs_vertex3v(%struct.vec3*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
